--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Práctica Entidades y Atributos</title>
 </head>
 <body>
-    <p>Debo aprender a desarrollar código HTML &amp; CSS si quiero ser desarollador web.</p>
+    <p>Debo aprender a desarrollar código HTML&amp;CSS si quiero ser desarollador web.</p>
+    <p>La clase LMI empieza a las 8:00</p>
+    <p>Me encanta madrugar tomar una ducha y venir al instituto para aprender HTML.</p>
+    <p>Si llego tarde el profesor marcará mi <span style="color:red"> nombre </span> en rojo.</p>
 </body>
 </html>
