--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>La clase LMI empieza a las 8:00 <span style="font-size: 1rem;">&#x23F0</span>.</p>
     <p>Me encanta madrugar <span style="font-size: 1rem;">&#128513</span> tomar una ducha <span style="font-size: 1rem;">&#x1F6BF</span> y venir al instituto para aprender HTML.</p>
     <p>Si llego tarde el profesor marcará mi <span style="color:red"> nombre </span> en rojo.</p>
-    <p onmousemove="this.style.color='red'">Jose Antonio Boix Molins</p>
+    <p onmouseove="this.style.color='red'">Jose Antonio Boix Molins</p>
     
 </body>
 </html>
